--- a/Infoczytnik.html
+++ b/Infoczytnik.html
@@ -177,6 +177,7 @@
     text-align:center;
     cursor:pointer;
     padding:24px;
+    touch-action: manipulation;
   }
   .unlock .box{
     border:1px solid rgba(255,255,255,.18);
@@ -220,16 +221,23 @@
     </div>
   </div>
 
+  <!-- ✅ konfiguracja jako GLOBAL -->
+  <script src="config/firebase-config.js"></script>
+
 <script type="module">
-  import { firebaseConfig } from "./config/firebase-config.js";
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
   import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+
+  const firebaseConfig = window.firebaseConfig;
+  if(!firebaseConfig){
+    alert("Brak window.firebaseConfig. Sprawdź plik config/firebase-config.js");
+    throw new Error("Missing window.firebaseConfig");
+  }
 
   const app = initializeApp(firebaseConfig);
   const db  = getFirestore(app);
 
   const ASSET_VERSION = "2025-12-13-1";
-
   const DEFAULT_PING_URL = `assets/audio/global/Ping.mp3?v=${ASSET_VERSION}`;
   const DEFAULT_MSG_URL  = `assets/audio/global/Message.mp3?v=${ASSET_VERSION}`;
 
@@ -288,13 +296,17 @@
     logo: document.getElementById("logo"),
   };
 
+  // --- Audio unlock ---
   let audioArmed = false;
   function armAudio(){
     if(audioArmed) return;
     audioArmed = true;
     el.unlock.style.display = "none";
   }
+  // Na tabletach/telefonach bywa pewniejsze niż sam click:
   el.unlock.addEventListener("click", armAudio);
+  el.unlock.addEventListener("pointerdown", armAudio, { passive:true });
+  el.unlock.addEventListener("touchstart", armAudio, { passive:true });
   window.addEventListener("keydown", armAudio);
 
   async function playUrlOnce(url){
