--- a/Infoczytnik.html
+++ b/Infoczytnik.html
@@ -5,6 +5,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>WH40k Data-Slate — Infoczytnik</title>
 
+<!-- ✅ AUTO-CACHE-BUSTING (dla tabletów które uparcie trzymają starą wersję)
+     Jeśli strona została otwarta bez parametru ?v=..., przekieruj na tę samą stronę z wersją.
+     Dzięki temu gracze mogą ustawić jako stronę startową "Infoczytnik.html" bez dopisków,
+     a Ty zmieniasz tylko stałą INF_VERSION przy kolejnych aktualizacjach. -->
+<script>
+  (function autoCacheBust(){
+    const INF_VERSION = "2025-12-13-2"; // <-- zwiększaj przy każdej aktualizacji Infoczytnika
+    const url = new URL(window.location.href);
+
+    // jeśli nie ma parametru v albo jest inny -> przekieruj
+    if (url.searchParams.get("v") !== INF_VERSION) {
+      url.searchParams.set("v", INF_VERSION);
+
+      // replace() żeby nie zaśmiecać historii "wstecz"
+      window.location.replace(url.toString());
+    }
+  })();
+</script>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Cinzel:wght@400;700&family=Rajdhani:wght@400;600&family=Black+Ops+One&family=Staatliches&family=Orbitron:wght@400;700&family=Questrial&family=Russo+One&display=swap" rel="stylesheet">
@@ -177,7 +196,6 @@
     text-align:center;
     cursor:pointer;
     padding:24px;
-    touch-action: manipulation;
   }
   .unlock .box{
     border:1px solid rgba(255,255,255,.18);
@@ -221,23 +239,16 @@
     </div>
   </div>
 
-  <!-- ✅ konfiguracja jako GLOBAL -->
-  <script src="config/firebase-config.js"></script>
-
 <script type="module">
+  import { firebaseConfig } from "./config/firebase-config.js";
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
   import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
-
-  const firebaseConfig = window.firebaseConfig;
-  if(!firebaseConfig){
-    alert("Brak window.firebaseConfig. Sprawdź plik config/firebase-config.js");
-    throw new Error("Missing window.firebaseConfig");
-  }
 
   const app = initializeApp(firebaseConfig);
   const db  = getFirestore(app);
 
   const ASSET_VERSION = "2025-12-13-1";
+
   const DEFAULT_PING_URL = `assets/audio/global/Ping.mp3?v=${ASSET_VERSION}`;
   const DEFAULT_MSG_URL  = `assets/audio/global/Message.mp3?v=${ASSET_VERSION}`;
 
@@ -296,17 +307,19 @@
     logo: document.getElementById("logo"),
   };
 
-  // --- Audio unlock ---
   let audioArmed = false;
   function armAudio(){
     if(audioArmed) return;
     audioArmed = true;
     el.unlock.style.display = "none";
   }
-  // Na tabletach/telefonach bywa pewniejsze niż sam click:
-  el.unlock.addEventListener("click", armAudio);
-  el.unlock.addEventListener("pointerdown", armAudio, { passive:true });
+
+  // click/tap
+  el.unlock.addEventListener("click", armAudio, { passive:true });
+
+  // dodatkowe “awaryjne” wejścia (czasem mobile blokuje click gdy element ma overlay)
   el.unlock.addEventListener("touchstart", armAudio, { passive:true });
+  window.addEventListener("pointerdown", (e)=>{ if(!audioArmed) armAudio(); }, { passive:true });
   window.addEventListener("keydown", armAudio);
 
   async function playUrlOnce(url){
