--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     a{color:#8aff8a;text-decoration:none}
     a:hover{text-decoration:underline}
     .box{max-width:820px;border:1px solid rgba(0,255,0,.25);border-radius:14px;padding:16px;background:rgba(0,255,0,.04)}
-    .row{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
-    .btn{display:inline-block;padding:12px 14px;border:1px solid rgba(0,255,0,.35);border-radius:12px;background:rgba(0,0,0,.35)}
+    .row{display:grid;gap:12px 14px;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));margin-top:12px;align-items:stretch}
+    .btn{display:flex;align-items:center;justify-content:center;padding:12px 14px;border:1px solid rgba(0,255,0,.35);border-radius:12px;background:rgba(0,0,0,.35);text-align:center}
     .muted{opacity:.75;font-size:13px;margin-top:10px;line-height:1.35}
     code{color:#b6ffb6}
   </style>
@@ -21,7 +21,8 @@
     <div class="row">
       <a class="btn" href="./GM.html">Otwórz GM</a>
       <a class="btn" href="./Infoczytnik.html">Otwórz Infoczytnik</a>
-      <a class="btn" href="./Infoczytnik.html?debug=1">Infoczytnik (debug)</a>
+      <a class="btn" href="./GM.html?debug=1&logs=1&mockWs=1">GM (debug)</a>
+      <a class="btn" href="./Infoczytnik.html?debug=1&logs=1&mockAudio=1">Infoczytnik (debug)</a>
     </div>
     <div class="muted">
       Audio: w Infoczytniku kliknij raz ekran, żeby odblokować dźwięk (wymóg przeglądarki).<br>
