Add flicker toggle control

--- a/GM.html
+++ b/GM.html
@@ -172,9 +172,15 @@
             Gdy losowanie wyłączone, wybierasz osobno numer Prefix i Suffix (1..N zależnie od frakcji).
           </div>
 
-          <div class="row" style="align-items:center; gap:8px; margin-top:12px;">
-            <input type="checkbox" id="showLogo" checked style="width:18px; height:18px; margin:0;" />
-            <label for="showLogo" style="margin:0; color:var(--text);">Dodaj logo</label>
+          <div class="row" style="align-items:center; gap:18px; margin-top:12px;">
+            <div style="display:flex; align-items:center; gap:8px;">
+              <input type="checkbox" id="showLogo" checked style="width:18px; height:18px; margin:0;" />
+              <label for="showLogo" style="margin:0; color:var(--text);">Dodaj logo</label>
+            </div>
+            <div style="display:flex; align-items:center; gap:8px;">
+              <input type="checkbox" id="flicker" checked style="width:18px; height:18px; margin:0;" />
+              <label for="flicker" style="margin:0; color:var(--text);">Flicker</label>
+            </div>
           </div>
         </div>
       </div>
@@ -233,6 +239,7 @@
       prefixIndex: document.getElementById("prefixIndex"),
       suffixIndex: document.getElementById("suffixIndex"),
       showLogo: document.getElementById("showLogo"),
+      flicker: document.getElementById("flicker"),
 
       // message
       message: document.getElementById("message"),
@@ -334,6 +341,7 @@
           // fillery
           prefixIndex, suffixIndex,
           showLogo: !!el.showLogo.checked,
+          flicker: !!el.flicker.checked,
 
           // tekst
           text: isClear ? "" : (el.message.value || ""),
@@ -370,6 +378,7 @@
           prefixFontSize: psFontPx + "px",
           suffixFontSize: psFontPx + "px",
           showLogo: !!el.showLogo.checked,
+          flicker: !!el.flicker.checked,
 
           nonce: nonce(),
           ts: firebase.firestore.FieldValue.serverTimestamp()
