--- a/Infoczytnik.html
+++ b/Infoczytnik.html
@@ -8,7 +8,7 @@
 <!-- ✅ AUTO-CACHE-BUSTING (żeby tablet nie trzymał starej wersji) -->
 <script>
   (function autoCacheBust(){
-    const INF_VERSION = "2025-12-13-5"; // <- zmieniaj przy aktualizacjach
+    const INF_VERSION = "2025-12-13-6"; // <- zmieniaj przy aktualizacjach
     window.__dsVersion = INF_VERSION;    // spójne dla assetów i cache-bustingu
     const url = new URL(window.location.href);
     if (url.searchParams.get("v") !== INF_VERSION) {
@@ -151,6 +151,7 @@
     align-items:flex-start;
     justify-content:space-between;
     gap: 12px;
+    margin-bottom: var(--filler-gap);
   }
 
   .prefix{
@@ -158,7 +159,7 @@
     color: var(--prefix-color);
     font-size: var(--prefix-font-size);
     letter-spacing: 1.5px;
-    margin: 0 0 var(--filler-gap) 0;
+    margin: 0;
     white-space: pre-wrap;
   }
 
@@ -193,12 +194,16 @@
     text-shadow: 0 0 18px rgba(0,255,120,.18), 0 2px 6px rgba(0,0,0,.70);
   }
 
-  .suffixRow{display:flex; align-items:flex-start;}
+  .suffixRow{
+    display:flex;
+    align-items:flex-start;
+    margin-top: var(--filler-gap);
+  }
   .suffix{
     color: var(--suffix-color);
     font-size: var(--suffix-font-size);
     letter-spacing: 1.5px;
-    margin: var(--filler-gap) 0 0 0;
+    margin: 0;
     white-space: pre-wrap;
   }
 
